load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("bpf.bzl", "bpf_program", "bpf_skel")

cc_binary(
    name = "my_hello",
    srcs = ["my_hello.cc"],
    deps = [
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:flags",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
    ],
)

# Libbpf build rules
filegroup(
    name = "libbpf_headers",
    srcs = glob(["libbpf/src/*.h"]),
)

filegroup(
    name = "libbpf_uapi_headers_files",
    srcs = glob(["libbpf/include/uapi/**/*.h"]),
)

cc_library(
    name = "libbpf_uapi_headers",
    hdrs = glob(["libbpf/include/uapi/**/*.h"]),
    includes = ["libbpf/include/uapi"],
)

cc_library(
    name = "libbpf",
    srcs = glob(
        [
            "libbpf/src/*.c",
            "libbpf/src/*.h",
            "libbpf/include/**/*.h",
        ],
        exclude = ["libbpf/src/test_libbpf.c"],
    ),
    hdrs = glob(["libbpf/src/*.h"]),
    copts = [
        "-g",
        "-O2",
        "-Werror",
        "-Wall",
        "-std=gnu89",
        "-D_LARGEFILE64_SOURCE",
        "-D_FILE_OFFSET_BITS=64",
        "-Wno-unknown-warning-option",
        "-Wno-format-overflow",
        "-Wno-unused-command-line-argument",
        "-Wno-compare-distinct-pointer-types",
        "-Wno-unused-parameter",
        "-Wno-missing-field-initializers",
    ],
    include_prefix = "bpf",
    includes = [
        "libbpf/include",
        "libbpf/include/uapi",
        "libbpf/src",
    ],
    linkopts = [
        "-lelf",
        "-lz",
    ],
    strip_include_prefix = "libbpf/src",
    deps = [":libbpf_uapi_headers"],
)

genrule(
    name = "nvme_core_gen_h",
    srcs = [],
    outs = ["nvme_core_gen.h"],
    cmd = "bpftool btf dump file /sys/kernel/btf/nvme_core format c > $@",
)

bpf_program(
    name = "nvme_trace_bpf_o",
    src = "nvme_trace.bpf.c",
    hdrs = [
        "nvme_core.h",
        "nvme_trace.h",
        "types.bpf.h",
    ],
    bpf_object = "nvme_trace.bpf.o",
)

bpf_skel(
    name = "nvme_trace_skel_h",
    bpf_object = ":nvme_trace_bpf_o",
    skel_header = "nvme_trace.skel.h",
)

cc_binary(
    name = "nvme_trace",
    srcs = [
        "nvme_trace.cc",
        "nvme_trace.h",
        "types.bpf.h",
        ":nvme_trace_skel_h",
    ],
    # Link against system libraries required by libbpf (elf, zlib)
    linkopts = [
        "-lelf",
        "-lz",
    ],
    deps = [
        ":libbpf",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:flags",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
    ],
)

bpf_program(
    name = "nvme_latency_bpf_o",
    src = "nvme_latency.bpf.c",
    hdrs = [
        "bits.bpf.h",
        "nvme_core.h",
        "nvme_latency.h",
        "types.bpf.h",
    ],
    bpf_object = "nvme_latency.bpf.o",
)

bpf_skel(
    name = "nvme_latency_skel_h",
    bpf_object = ":nvme_latency_bpf_o",
    skel_header = "nvme_latency.skel.h",
)

cc_binary(
    name = "nvme_latency",
    srcs = [
        "bits.bpf.h",
        "nvme_latency.cc",
        "nvme_latency.h",
        "types.bpf.h",
        ":nvme_latency_skel_h",
    ],
    # Link against system libraries required by libbpf (elf, zlib)
    linkopts = [
        "-lelf",
        "-lz",
    ],
    deps = [
        ":libbpf",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:flags",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
    ],
)

cc_test(
    name = "bits_bpf_test",
    srcs = [
        "bits.bpf.h",
        "bits_bpf_test.cc",
        "types.bpf.h",
    ],
    deps = [
        "@abseil-cpp//absl/log",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
