load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("bpf.bzl", "bpf_program", "bpf_skel")

cc_binary(
    name = "my_hello",
    srcs = ["my_hello.cc"],
    deps = [
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:flags",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
    ],
)

# Libbpf build rules
filegroup(
    name = "libbpf_headers",
    srcs = glob(["bpftool/libbpf/src/*.h"]),
)

filegroup(
    name = "libbpf_uapi_headers_files",
    srcs = glob(["bpftool/libbpf/include/uapi/**/*.h"]),
)

cc_library(
    name = "libbpf_uapi_headers",
    hdrs = glob(["bpftool/libbpf/include/uapi/**/*.h"]),
    includes = ["bpftool/libbpf/include/uapi"],
)

cc_library(
    name = "libbpf",
    srcs = glob(
        [
            "bpftool/libbpf/src/*.c",
            "bpftool/libbpf/src/*.h",
            "bpftool/libbpf/include/**/*.h",
        ],
        exclude = ["bpftool/libbpf/src/test_libbpf.c"],
    ),
    hdrs = glob(["bpftool/libbpf/src/*.h"]),
    copts = [
        "-g",
        "-O2",
        "-Werror",
        "-Wall",
        "-std=gnu89",
        "-D_LARGEFILE64_SOURCE",
        "-D_FILE_OFFSET_BITS=64",
        "-Wno-unknown-warning-option",
        "-Wno-format-overflow",
        "-Wno-unused-command-line-argument",
        "-Wno-compare-distinct-pointer-types",
        "-Wno-unused-parameter",
        "-Wno-missing-field-initializers",
    ],
    include_prefix = "bpf",
    includes = [
        "bpftool/libbpf/include",
        "bpftool/libbpf/include/uapi",
        "bpftool/libbpf/src",
    ],
    linkopts = [
        "-lelf",
        "-lz",
    ],
    strip_include_prefix = "bpftool/libbpf/src",
    deps = [":libbpf_uapi_headers"],
)

cc_binary(
    name = "bpftool",
    srcs = glob(
        [
            "bpftool/src/*.c",
            "bpftool/src/**/*.h",
            "bpftool/include/**/*.h",
        ],
        exclude = ["bpftool/src/jit_disasm.c"],
    ) + [
        "bpftool/src/kernel/bpf/disasm.c",
    ],
    copts = [
        "-O2",
        "-W",
        "-Wall",
        "-Wextra",
        "-Wno-unused-parameter",
        "-Wno-missing-field-initializers",
        "-Wno-format-truncation",
        "-DPACKAGE='\"bpftool\"'",
        "-D__EXPORTED_HEADERS__",
        "-DBPFTOOL_WITHOUT_SKELETONS",
        "-D_LARGEFILE64_SOURCE",
        "-D_FILE_OFFSET_BITS=64",
    ],
    includes = [
        "bpftool/include",
        "bpftool/include/uapi",
        "bpftool/src",
        "bpftool/src/kernel/bpf",
    ],
    linkopts = ["-lcrypto"],
    deps = [":libbpf"],
)

cc_library(
    name = "nvme_abi",
    srcs = [],
    hdrs = ["nvme_abi.h"],
    cxxopts = ["-std=c++20"],
)

cc_library(
    name = "nvme_strings",
    srcs = ["nvme_strings.cc"],
    hdrs = ["nvme_strings.h"],
    cxxopts = ["-std=c++20"],
    deps = [":nvme_abi"],
)

genrule(
    name = "nvme_core_gen_h",
    srcs = [],
    outs = ["nvme_core_gen.h"],
    tools = [":bpftool"],
    cmd = "$(location :bpftool) btf dump file /sys/kernel/btf/nvme_core format c > $@",
)

bpf_program(
    name = "nvme_trace_bpf_o",
    src = "nvme_trace.bpf.c",
    hdrs = [
        "nvme_core_gen.h",
        "nvme_trace.h",
        "types.bpf.h",
    ],
    bpf_object = "nvme_trace.bpf.o",
)

bpf_skel(
    name = "nvme_trace_skel_h",
    bpf_object = ":nvme_trace_bpf_o",
    skel_header = "nvme_trace.skel.h",
)

cc_binary(
    name = "nvme_trace",
    srcs = [
        "nvme_trace.cc",
        "nvme_trace.h",
        "types.bpf.h",
        ":nvme_trace_skel_h",
    ],
    # Link against system libraries required by libbpf (elf, zlib)
    linkopts = [
        "-lelf",
        "-lz",
    ],
    deps = [
        ":libbpf",
        "@abseil-cpp//absl/cleanup",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:flags",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
    ],
)

bpf_program(
    name = "nvme_latency_bpf_o",
    src = "nvme_latency.bpf.c",
    hdrs = [
        "bits.bpf.h",
        "nvme_core_gen.h",
        "nvme_latency.h",
        "types.bpf.h",
    ],
    bpf_object = "nvme_latency.bpf.o",
)

bpf_skel(
    name = "nvme_latency_bpf_skel_h",
    bpf_object = ":nvme_latency_bpf_o",
    skel_header = "nvme_latency_bpf.skel.h",
)

bpf_program(
    name = "nvme_latency_vlog_bpf_o",
    src = "nvme_latency.bpf.c",
    hdrs = [
        "bits.bpf.h",
        "nvme_core_gen.h",
        "nvme_latency.h",
        "types.bpf.h",
    ],
    clang_args= "-DVLOG",
    bpf_object = "nvme_latency_vlog.bpf.o",
)

bpf_skel(
    name = "nvme_latency_vlog_bpf_skel_h",
    bpf_object = ":nvme_latency_vlog_bpf_o",
    skel_header = "nvme_latency_vlog_bpf.skel.h",
)

cc_binary(
    name = "nvme_latency",
    srcs = [
        "bits.bpf.h",
        "nvme_latency.cc",
        "nvme_latency.h",
        "types.bpf.h",
        ":nvme_latency_bpf_skel_h",
        ":nvme_latency_vlog_bpf_skel_h",
    ],
    cxxopts = ["-std=c++20"],
    # Link against system libraries required by libbpf (elf, zlib)
    linkopts = [
        "-lelf",
        "-lz",
    ],
    deps = [
        ":libbpf",
        ":nvme_abi",
        ":nvme_strings",
        "@abseil-cpp//absl/cleanup",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:flags",
        "@abseil-cpp//absl/log:initialize",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
    ],
)

cc_test(
    name = "bits_bpf_test",
    srcs = [
        "bits.bpf.h",
        "bits_bpf_test.cc",
        "types.bpf.h",
    ],
    deps = [
        "@abseil-cpp//absl/log",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)


